<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="main_header">My Nanodegree Apps!</string>

    <!--Project buttons labels-->
    <string name="project_movies">Popular Movies</string>
    <string name="project_scores">Football Scores App</string>
    <string name="project_library">Library App</string>
    <string name="project_build_it_bigger">Build It Bigger</string>
    <string name="project_xyz_reader">XYZ Reader</string>
    <string name="project_capstone">Capstone Project</string>
</resources>
