<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/colorLightBackground"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity">

    <TextView
        android:id="@+id/header"
        android:text="@string/main_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:gravity="center"
    />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/header"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingTop="30dp"
        android:orientation="vertical" >

        <Button xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/button_movies"
            style="@style/ProjectButtons"
            android:text="@string/project_movies"
            android:onClick="showToast" />

        <Button xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/button_scores"
            style="@style/ProjectButtons"
            android:text="@string/project_scores"
            android:onClick="showToast" />

        <Button xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/button_library"
            style="@style/ProjectButtons"
            android:text="@string/project_library"
            android:onClick="showToast" />

        <Button xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/button_build_it_bigger"
            style="@style/ProjectButtons"
            android:text="@string/project_build_it_bigger"
            android:onClick="showToast" />

        <Button xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/button_xyz_reader"
            style="@style/ProjectButtons"
            android:text="@string/project_xyz_reader"
            android:onClick="showToast" />

        <Button xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/button_capstone"
            style="@style/ProjectButtons"
            android:text="@string/project_capstone"
            android:background="@color/colorAccent"
            android:onClick="showToast" />

    </LinearLayout>
</RelativeLayout>
